# game-of-life

./: .gitignore  CMakeLists.txt
src/: board.cpp  board.h  key_listener.cpp  key_listener.h  main.cpp
src/graphics/: graphics_handler.cpp  graphics_handler.h  grid.cpp  grid.h  screen_entity.h
